--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button onclick="scrollToSection('cine')">Cine</button>
         <button onclick="scrollToSection('entretenimiento')">Entretenimiento</button>
         <button onclick="scrollToSection('reddit')">Reddit</button>
+        <button onclick="scrollToSection('clima')">Clima</button>
     </div>
 </header>
 
@@ -80,6 +81,15 @@
         <p>Explora el universo de Reddit con las publicaciones más populares y curiosas.</p>
         <div id="redditNoticias" class="noticias-container">
             <!-- Contenido de noticias de Reddit -->
+        </div>
+    </section>
+
+    <!-- Sección para mostrar información del clima -->
+    <section id="clima">
+        <h2>Clima</h2>
+        <p>Consulta el clima actual en tu ciudad.</p>
+        <div id="climaInfo" class="noticias-container">
+            <!-- Contenido de información del clima -->
         </div>
     </section>
 </main>
@@ -151,8 +161,7 @@
 
                 posts.forEach(post => {
                     const postElemento = document.createElement('div');
-                    postElemento.classList.add
-                    ('post');
+                    postElemento.classList.add('post');
                     postElemento.innerHTML = `
                         <h3>${post.data.title}</h3>
                         <p>${post.data.selftext}</p>
@@ -167,6 +176,35 @@
     // Cargar noticias de Reddit al cargar la página
     window.addEventListener('load', () => {
         cargarNoticiasReddit('all', 'redditNoticias'); // Cargar noticias de Reddit al inicio
+    });
+
+    // Función para cargar información del clima desde la API de OpenWeatherMap
+    function cargarClima(ciudad, contenedorId) {
+        const apiKey = 'your-openweather-api-key'; // Reemplaza con tu API key de OpenWeatherMap
+        fetch(`https://api.openweathermap.org/data/2.5/weather?q=${ciudad}&units=metric&lang=es&appid=${apiKey}`)
+            .then(response => response.json())
+            .then(data => {
+                const contenedor = document.getElementById(contenedorId);
+
+                contenedor.innerHTML = ''; // Limpiar el contenedor antes de cargar nueva información
+
+                const climaElemento = document.createElement('div');
+                climaElemento.classList.add('clima');
+                climaElemento.innerHTML = `
+                    <h3>${data.name}, ${data.sys.country}</h3>
+                    <p>Temperatura: ${data.main.temp}°C</p>
+                    <p>Clima: ${data.weather[0].description}</p>
+                    <p>Humedad: ${data.main.humidity}%</p>
+                    <p>Viento: ${data.wind.speed} m/s</p>
+                `;
+                contenedor.appendChild(climaElemento);
+            })
+            .catch(error => console.error('Error al cargar información del clima:', error));
+    }
+
+    // Cargar información del clima al cargar la página
+    window.addEventListener('load', () => {
+        cargarClima('Ciudad de Guatemala', 'climaInfo'); // Cargar el clima de Ciudad de Guatemala al inicio
     });
 </script>
 
